--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ loguru = "^0.7.3"
 loki-logger-handler = "^1.0.2"
 aiogram = "^3.15.0"
 pydantic-settings = "^2.7.0"
+python-dateutil = "^2.9.0.post0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
