Add deploy by copy to server (#2)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,6 +99,7 @@ jobs:
   deploy:
 
     runs-on: ubuntu-latest
+    environment: production
     needs: [ lint, test ]
     if: ${{ github.ref == 'refs/heads/main' }}
     env:
@@ -118,7 +119,7 @@ jobs:
 #      run: sh ./ci/notify.sh "Starting deploy in PROD"
 
     - name: Deploy
-      run: sh ./ci/deploy-github.sh
+      run: sh ./ci/deploy-github-copy.sh
 
 #    - name: Notify ok
 #      run: sh ./ci/notify.sh "Deploy in PROD success ✅"
