--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,16 @@ TG_DB_DUMP_CHAT_ID=0
 TG_LOG_SEND_CHAT_ID=chat_id_to_send_logs
 GF_SECURITY_ADMIN_USER=gf_admin_user
 GF_SECURITY_ADMIN_PASSWORD=gf_admin_password
+
+COMPOSE_PROJECT_NAME=temporal
+CASSANDRA_VERSION=3.11.9
+ELASTICSEARCH_VERSION=7.16.2
+MYSQL_VERSION=8
+TEMPORAL_VERSION=1.25.2
+TEMPORAL_ADMINTOOLS_VERSION=1.25.2-tctl-1.18.1-cli-1.1.1
+TEMPORAL_UI_VERSION=2.31.2
+TEMPORAL_POSTGRESQL_VERSION=13
+TEMPORAL_POSTGRES_PASSWORD=temporal
+TEMPORAL_POSTGRES_USER=temporal
+TEMPORAL_POSTGRES_DEFAULT_PORT=5433
+OPENSEARCH_VERSION=2.5.0
