--- a/.temporal.env.example
+++ b/.temporal.env.example
@@ -1,7 +1,5 @@
-MYSQL_VERSION=8
 POSTGRES_PASSWORD=temporal
 POSTGRES_PWD=temporal
 POSTGRES_USER=temporal
 POSTGRES_DEFAULT_PORT=5433
-OPENSEARCH_VERSION=2.5.0
-DYNAMIC_CONFIG_FILE_PATH=config/dynamicconfig/development-sql.yaml
+DB=postgres12
