--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ pydantic-settings = "^2.7.0"
 python-dateutil = "^2.9.0.post0"
 httpx = "^0.28.1"
 temporalio = "^1.8.0"
+pyjwt = "^2.10.1"
+cryptography = "^44.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
