--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ TG_DB_DUMP_CHAT_ID=0
 TG_LOG_SEND_CHAT_ID=chat_id_to_send_logs
 GF_SECURITY_ADMIN_USER=gf_admin_user
 GF_SECURITY_ADMIN_PASSWORD=gf_admin_password
+YANDEX_CLOUD_KEY_ID=...
+YANDEX_CLOUD_PRIVATE_KEY_FILE=.yandex_cloud_private_key
+YANDEX_CLOUD_SERVICE_ACCOUNT_ID=...
+YANDEX_CLOUD_CATALOG_ID=...
